@@ -1,3 +1,8 @@
+2002-09-30  Sam Steingold  <sds@gnu.org>
+
+	* init.lisp (defun): use GET-FUNNAME-SYMBOL instead of GET-SETF-SYMBOL
+	* trace.lisp (check-traceable): ditto
+
 2002-09-29  Sam Steingold  <sds@gnu.org>
 
 	* makemake.in: fixed regeneration of intparam.h and floatparam.h
